--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -4,7 +4,7 @@
 
 # Default language
 es:
-  languageCode: es-ES
+  languageCode: es-es
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   #contentDir: content/en
 
