--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Andres Tafur - Sitio web personal'
+    description: 'Andrés Tafur - Sitio web personal'
     twitter: 'GetResearchDev'
   analytics:
     google_analytics: ''
