--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Website name
-title: Andres Tafur - Sitio web personal
+title: Andrés Tafur - Sitio web personal
 # Website URL
 baseURL: 'https://example.com/'
 
