--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,15 @@ main:
   - name: Inicio
     url: /
     weight: 10
-  - name: Papers
+  - name: Publicaciones
     url: /#papers
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
-  - name: Projects
+  - name: Proyectos
     url: projects/
     weight: 30
-  - name: Courses
+  - name: Blog
+    url: /#news
+    weight: 13
+  - name: Docencia
     url: courses/
     weight: 40
