--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: /#papers
     weight: 11
   - name: Proyectos
-    url: projects/
+    url: proyectos/
     weight: 30
   - name: Blog
     url: /#news
