--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,8 +14,8 @@ main:
     url: proyectos/
     weight: 30
   - name: Blog
-    url: /#news
-    weight: 13
+    url: /blog
+    weight: 40
   - name: Docencia
     url: courses/
-    weight: 40
+    weight: 13
