--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Andrés Tafur - Sitio web personal
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'https://andrestafur.com/'
 
 ############################
 ## LANGUAGE
